# engineooze

./: CMakeLists.txt  Makefile  README.md  sdkconfig
acceptance/: CMakeLists.txt
acceptance/main/: CMakeLists.txt  enginooze_test.c
main/: CMakeLists.txt  engine.c  enginooze.c  exhaust.c  sound_device.c
main/include/: engine.h  exhaust.h  sound_device.h
main/sounds/: idle.h
test/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.defaults
test/main/: CMakeLists.txt  engine_helpers.c  engine_test.c  engine_test_helpers.c  exhaust_test.c  exhaust_test_helpers.c  main_test.c
test/main/include/: engine_test.h
